# Portal

./: .gitignore  AI_CONTEXT.md  Cargo.toml  README.md  RUNTIME_SETUP.md  SECURITY_AUDIT_REPORT.md  assign_role.json  assign_role2.json  axum_test  create_rp_resource.json  create_user.json  delete_user.json  get_user.json  get_user_full.json  investigate_roles.py  login_response.json  package-lock.json  package.json  playwright.config.js  runtime.toml  test_block_modules.sh  verify_delete.json
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: backup.rs  init.rs  migrate.rs  mod.rs  new_rust_app.rs  new_site.rs  shell.rs  start.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  site.rs
crates/email/: Cargo.toml
crates/email/src/: config.rs  imap.rs  lib.rs  parse.rs  smtp.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/http/: Cargo.toml
crates/http/assets/: app.js  assets.json  desk-template.html  index.html  login.html  style.css
crates/http/src/: extract.rs  lib.rs  router.rs  site.rs  websocket.rs
crates/http/src/handlers/: api.rs  auth.rs  desk.rs  files.rs  mod.rs  permissions.rs  socketio.rs
crates/http/src/middleware/: auth.rs  logging.rs  mod.rs  site.rs
crates/kiff_logger/: Cargo.toml
crates/kiff_logger/src/: handlers.rs  lib.rs  methods.rs  page.rs  token.rs
crates/kiff_logger/src/doctypes/kiff_logger/: kiff_log_entry.json  kiff_log_query.json  kiff_logger_token.json  s3_backup_config.json
crates/kiff_logger/src/pages/kiff_logger_token_ui/: kiff_logger_token_ui.js  kiff_logger_token_ui.json
crates/kiff_logger/src/workspaces/kiff_logger/: kiff_logger.json
crates/log_engine/: Cargo.toml
crates/log_engine/src/: engine.rs  error.rs  lib.rs  record.rs  service.rs  trigger.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: cache.rs  doctype.rs  field.rs  lib.rs  meta.rs  naming.rs
crates/orm/: Cargo.toml
crates/orm/src/: doctype_sync.rs  document.rs  filters.rs  hooks.rs  lib.rs  migrations.rs  pool.rs  query.rs
crates/orm/src/backends/: postgres.rs  sqlite.rs
crates/permissions/: Cargo.toml
crates/permissions/src/: field_perms.rs  lib.rs  query_conditions.rs  roles.rs  sod.rs  user_perms.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/python-bridge/: Cargo.toml
crates/python-bridge/src/: db.rs  document.rs  lib.rs  queue.rs  realtime.rs  session.rs  utils.rs
crates/queue/: Cargo.toml
crates/queue/src/: job.rs  lib.rs  pubsub.rs  scheduler.rs  worker.rs
crates/runtime/: Cargo.toml  build.rs
crates/runtime/src/: executor.rs  hooks.rs  logging.rs  main.rs  pool_watchdog.rs  registered_apps.rs  rust_apps.rs  scheduler_backend.rs  startup.rs
crates/session/: Cargo.toml
crates/session/src/: auth.rs  lib.rs  mfa.rs  middleware.rs  session.rs
crates/sql-translator/: Cargo.toml
crates/sql-translator/src/: functions.rs  lib.rs  parser.rs  placeholders.rs  rewriter.rs  tables.rs
e2e/: auth.setup.js  global-setup.js  global-teardown.js  infrastructure-server.spec.js  user-and-roles.spec.js
e2e/helpers/: db.js
logengine-data/: wal.ndjson
logengine-data/index/: .managed.json  meta.json
playwright/: README.md  package-lock.json  package.json  playwright.config.js
playwright/tests/: 01_kiff_logger_api.spec.js  02_kiff_logger_ui.spec.js  03_kiff_log_entry.spec.js
python/frappe/: __init__.py  _context.py  _db.py  _document.py  _messaging.py  _meta.py  _misc.py  _optimizations.py  _permissions.py  _types.py  _utils.py  exceptions.py
python/frappe/desk/: desk_page.py
python/frappe/model/: __init__.py
python/frappe/utils/: __init__.py  data.py
rust_apps/: apps.json
rust_apps/core/: Cargo.toml
rust_apps/core/src/: hooks.rs  layer.rs  lib.rs  logging.rs
rust_apps/sample/: Cargo.toml
rust_apps/sample/src/: lib.rs
rust_apps/sample/src/doctypes/todo/: todo.json
scripts/: build-desk.sh  delete_social_login_key.py  diagnose_social_login_key.py  fix_social_login.sql  fix_social_login_key_secret.py  fix_social_login_redirect.py  kiff-logs.sh  sync_rust_apps.py
src/: lib.rs
tests/: erpnext.rs  http.rs  orm.rs  permissions.rs  rust_apps.rs  sql_translator.rs
tests/common/: mod.rs
tests/erpnext/: test_journal_entry.rs
tests/http/: test_api.rs  test_auth.rs  test_desk.rs
tests/orm/: test_child_tables.rs  test_get_doc.rs  test_get_list.rs  test_save.rs
tests/permissions/: test_has_permission.rs  test_role_cache.rs
tests/sql_translator/: test_functions.rs  test_placeholders.rs  test_tables.rs
