[package]
name = "kiff"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kiff"
path = "src/main.rs"

[dependencies]
error       = { workspace = true }
config      = { workspace = true }
orm         = { workspace = true }
sql-translator = { path = "../crates/sql-translator" }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
clap        = { version = "4", features = ["derive"] }
