[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
error       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
base64      = { workspace = true }
rand        = "0.8"
