[package]
name = "kiff_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_apps_core = { path = "../../rust_apps/core" }
log_engine     = { path = "../log_engine" }
config         = { workspace = true }
error          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
axum           = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
chrono         = { workspace = true }
async-trait    = "0.1"
argon2         = "0.5"
rand           = "0.8"
hex            = "0.4"
orm            = { workspace = true }
permissions    = { path = "../permissions" }
session        = { path = "../session" }
