[package]
name = "log_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
error        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }
tantivy      = "0.22"
