[package]
name = "orm"
version = "0.1.0"
edition = "2021"

[dependencies]
error       = { workspace = true }
config      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sqlx        = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
dashmap     = { workspace = true }
async-trait = "0.1"
