[package]
name = "python-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "kiff_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
error       = { workspace = true }
orm         = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
pyo3        = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
queue       = { path = "../queue" }
