[package]
name = "queue"
version = "0.1.0"
edition = "2021"

[dependencies]
error       = { workspace = true }
orm         = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
pyo3        = { workspace = true }
dashmap     = { workspace = true }
uuid        = { workspace = true }
async-trait = "0.1"
cron        = "0.17"
