[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kiff-runtime"
path = "src/main.rs"

[dependencies]
audit_ready = { path = "../../rust_apps/audit_ready" }
error          = { workspace = true }
config         = { workspace = true }
orm            = { workspace = true }
sql-translator = { path = "../sql-translator" }
python-bridge  = { path = "../python-bridge" }
session        = { path = "../session" }
permissions    = { path = "../permissions" }
metadata       = { path = "../metadata" }
queue          = { path = "../queue" }
http           = { path = "../http" }
rust_apps_core = { path = "../../rust_apps/core" }
async-trait    = "0.1"

kiff_logger    = { path = "../kiff_logger" }
log_engine     = { path = "../log_engine" }
axum           = { workspace = true }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap        = { workspace = true }
chrono         = { workspace = true }
pyo3           = { workspace = true }
tower-http     = { workspace = true }

[build-dependencies]
serde          = { workspace = true, features = ["derive"] }
serde_json     = { workspace = true }
toml_edit      = "0.22"
