[package]
name = "session"
version = "0.1.0"
edition = "2021"

[dependencies]
error       = { workspace = true }
orm         = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
argon2      = { workspace = true }
totp-rs     = { workspace = true }
jsonwebtoken = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
axum        = { workspace = true }
uuid        = { workspace = true }
