[package]
name = "sample"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_apps_core = { path = "../core" }
error          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
axum           = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
async-trait    = "0.1"
